--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "express": "^4.18.2",
     "express-handlebars": "^6.0.7",
     "handlebars": "^4.7.7",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "web3": "^1.8.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
